# EvaluationOfEntropy

./: Cargo.toml  pyproject.toml
src/: lib.rs
src/evaluationofentropy/: __init__.py
