[project]
name = "evaluationofentropy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andrew Woodlee", email = "cybershell@cybershell.xyz" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
evaluationofentropy = "evaluationofentropy:main"

[tool.maturin]
module-name = "evaluationofentropy._core"
python-packages = ["evaluationofentropy"]
python-source = "src"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
