[project]
name = "evaluationofentropy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andrew Woodlee", email = "cybershell@cybershell.xyz" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.13",
    "setuptools<60",
    "wheel>=0.46.3",
    "maturin",
    "ndd>=1.10.6",
]

[project.scripts]
evaluationofentropy = "evaluationofentropy:main"

[tool.maturin]
module-name = "evaluationofentropy._core"
python-packages = ["evaluationofentropy"]
python-source = "src"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[tool.uv.extra-build-dependencies]
ndd = ["setuptools<60", "numpy>=1.13"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
